# swe-ai-fleet

./: .coveragerc  .cursorrules  .env.dev  .gitignore  .pre-commit-config.yaml  .sonarqube.properties  AGENTS_VS_MODELS_ARCHITECTURE.md  AGENT_TOOLS_COMPLETE.md  API_VERSIONING_IMPLEMENTATION.md  ARCHITECTURE_CORE_VS_MICROSERVICES.md  ARCHITECTURE_EVOLUTION.md  ARCHITECTURE_FLOW_ANALYSIS.md  ARCHIVED_TESTS_INVESTIGATION.md  BRANDING.md  CANDIDATOS_YAML_JSON.md  CLEAN_ARCHITECTURE_REFACTOR_20251020.md  CLUSTER_EXECUTION_EVIDENCE.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_CONTEXT.txt  COMMIT_SUMMARY.md  COMMUNICATION_AUDIT.md  COMPLETE_SYSTEM_DEMONSTRATION.md  CONTEXT_ARCHITECTURE.md  CONTEXT_SERVICE_SUMMARY.md  CONTRIBUTING.md  CRITICAL_TASK_ORCHESTRATOR_CONTEXT_COUPLING.md  CURSOR_CONTEXT.md  DEPLOYMENT_COMPLETE.md  DOCS_CONSOLIDATION_CHECKPOINT_2025-11-15.md  DOCS_CONSOLIDATION_CHECKPOINT_PHASE3_2025-11-15.md  DOCS_REORGANIZATION_PLAN.md  DOCUMENTATION_DUE_DILIGENCE.md  DOCUMENTATION_STANDARDS.md  DOCUMENTATION_STRATEGY_EXECUTIVE_SUMMARY_2025-11-15.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile.ray-swe-fleet  E2E_REAL_AGENTS_PLAN.md  E2E_REAL_AGENTS_STATUS.md  E2E_TESTING_SESSION_SUMMARY.md  E2E_TESTS_FINAL_SUMMARY.md  (+105 more)
core/ceremony_engine/: README.md  __init__.py  pyproject.toml
core/ceremony_engine/application/ports/: __init__.py  ceremony_metrics_port.py  definition_port.py  deliberation_port.py  llm_client_port.py  messaging_port.py  persistence_port.py  rehydration_port.py  step_handler_port.py  task_extraction_port.py
core/ceremony_engine/application/services/: __init__.py  ceremony_runner.py
core/ceremony_engine/application/use_cases/: __init__.py  llm_generation_usecase.py  rehydration_usecase.py  submit_deliberation_usecase.py  submit_task_extraction_usecase.py
core/ceremony_engine/domain/: __init__.py
core/ceremony_engine/domain/entities/: __init__.py  ceremony_definition.py  ceremony_instance.py
core/ceremony_engine/domain/value_objects/: __init__.py  context_entry.py  context_key.py  execution_context.py  guard.py  guard_name.py  guard_type.py  inputs.py  output.py  retry_policy.py  role.py  state.py  step.py  step_handler_type.py  step_id.py  step_output_entry.py  step_output_map.py  step_result.py  step_status.py  step_status_entry.py  step_status_map.py  timeouts.py  transition.py  transition_trigger.py
core/ceremony_engine/infrastructure/: __init__.py  yaml_validator.py
core/ceremony_engine/infrastructure/adapters/: __init__.py  ceremony_definition_adapter.py  dual_persistence_adapter.py  nats_messaging_adapter.py  neo4j_persistence_adapter.py  neo4j_queries.py  neo4j_rehydration_adapter.py  valkey_persistence_adapter.py
core/ceremony_engine/infrastructure/config/: __init__.py  neo4j_config.py  valkey_config.py
core/ceremony_engine/infrastructure/mappers/: __init__.py  ceremony_definition_mapper.py  ceremony_instance_mapper.py
core/ceremony_engine/infrastructure/validators/: __init__.py  ceremony_output_schema_validator.py
core/ceremony_engine/tests/: test_ceremony_engine_e2e.py
core/memory/: README.md  cataloger.py  pyproject.toml
core/memory/adapters/: redis_store.py
core/memory/dtos/: llm_call_dto.py  llm_response_dto.py
core/memory/ports/: persistence_kv_port.py  persistence_pipeline_port.py  persistence_store_port.py
core/ray_jobs/: README.md  __init__.py  pyproject.toml
core/ray_jobs/application/: __init__.py  execute_agent_task.py  generate_proposal.py
core/ray_jobs/domain/: __init__.py  agent_role.py  task_extraction_schema.py  vllm_request.py  vllm_response.py
core/ray_jobs/infrastructure/: __init__.py  ray_agent_factory.py
services/backlog_review_processor/: BACKLOG_REVIEW_FLOW.md  BACKLOG_REVIEW_FLOW_NO_STYLES.md  Dockerfile  README.md  __init__.py  generate-protos.sh  pyproject.toml  requirements.txt  server.py  test_generate_asyncapi_models.py
services/backlog_review_processor/application/: __init__.py
services/backlog_review_processor/domain/: __init__.py
services/backlog_review_processor/infrastructure/: __init__.py
services/backlog_review_processor/scripts/: generate_asyncapi_models.py
services/backlog_review_processor/tests/: __init__.py
services/planning/: .dockerignore  .gitignore  ARCHITECTURE.md  ARQUITECTURA_EVENTOS.md  COVERAGE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  __init__.py  generate-protos.sh  pyproject.toml  requirements.txt  server.py
services/planning/cmd/: main.go
services/planning/docs/: AUDIT_ARCHITECTURE_COMPLIANCE.md  AUDIT_ARCHITECTURE_COMPLIANCE_V2.md  AUDIT_ROLE_RESPONSIBILITY.md  AUDIT_TASK_ID_RESPONSIBILITY.md  PENDING_TASKS.md  PLANNING_SERVICE_STATE.md  RBAC_REVIEW.md  README.md  TASK_DERIVATION_SERVICE_PROPOSAL.md
services/planning/domain/: __init__.py
services/planning/tests/: __init__.py  conftest.py
services/planning_ceremony_processor/: Dockerfile  README.md  __init__.py  generate-protos.sh  pyproject.toml  requirements.txt  server.py
services/planning_ceremony_processor/application/: __init__.py
services/planning_ceremony_processor/infrastructure/: __init__.py
services/planning_ceremony_processor/tests/: __init__.py  conftest.py
services/ray_executor/: ARCHITECTURE.md  Dockerfile  README.md  config.py  generate-protos.sh  grpc_servicer.py  pyproject.toml  requirements.txt  server.py  server.py.backup
services/ray_executor/application/: __init__.py
services/ray_executor/domain/: __init__.py  environment_port.py
services/ray_executor/infrastructure/: __init__.py  deliberation_registry_entry.py  os_environment_adapter.py
services/ray_executor/tests/: __init__.py  test_execute_backlog_review_deliberation.py  test_in_memory_stats_tracker.py  test_server_bootstrap.py  test_server_config.py  test_server_entrypoint.py
services/task_derivation/: Dockerfile  README.md  generate-protos.sh  pyproject.toml  requirements.txt  server.py
services/task_derivation/application/: __init__.py
services/task_derivation/infrastructure/: nats_subjects.py
services/task_derivation/tests/: __init__.py
(+4010 files in other folders)
