[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-ai-fleet"
version = "0.1.0"
description = "Multi-agent SWE at the edge. Local-first, open-source."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.0",
    "neo4j>=5.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
]

[project.optional-dependencies]
# Developer tooling
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]

# Ray-based GPU tests and jobs (optional)
ray = [
    "ray[default]>=2.10",
]

# Plotting/report utilities used by GPU metrics jobs (optional)
plot = [
    "matplotlib>=3.8",
    "pandas>=2.2",
]

# Torch (heavy; platform/driver specific). Install only on GPU hosts.
gpu = [
    "torch>=2.3; platform_system == 'Linux'",
]

[project.scripts]
swe_ai_fleet-e2e = "swe_ai_fleet.cli.e2e_cluster_from_yaml:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["F", "E", "I", "UP", "B"]  # Pyflakes, pycodestyle, isort, pyupgrade, flake8-bugbear
ignore = []

# Ignora F401 solo en __init__.py si reexportas símbolos
per-file-ignores = { "src/swe_ai_fleet/__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
