[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-ai-fleet"
version = "0.1.0"
description = "Multi-agent SWE at the edge. Local-first, open-source."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.0",
    "neo4j>=5.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
]

[project.optional-dependencies]
# Developer tooling
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]

# gRPC microservices dependencies
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "nats-py>=2.6.0",
    "structlog>=23.2.0",
    "pyyaml>=6.0.1",
    "aiohttp>=3.9.0",
]

# Integration testing with Docker containers
integration = [
    "testcontainers>=4.0.0",
]

# Ray-based GPU tests and jobs (optional)
ray = [
    "ray[default]>=2.10",
]

# Plotting/report utilities used by GPU metrics jobs (optional)
plot = [
    "matplotlib>=3.8",
    "pandas>=2.2",
]

# Torch (heavy; platform/driver specific). Install only on GPU hosts.
gpu = [
    "torch>=2.3; platform_system == 'Linux'",
]

# Lightweight web UI and API server for demo
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "markdown>=3.6",
]

# Agent tools - Comprehensive toolkit for workspace operations
tools = [
    "requests>=2.31.0",         # HTTP client
    "psycopg2-binary>=2.9.9",   # PostgreSQL client
    # redis and neo4j already in base dependencies
]

[project.scripts]
swe_ai_fleet-e2e = "swe_ai_fleet.cli.e2e_cluster_from_yaml:main"
swe_ai_fleet-web = "swe_ai_fleet.web.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["src"]
extend-exclude = ["*_pb2.py", "*_pb2.pyi", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["F", "E", "I", "UP", "B"]  # Pyflakes, pycodestyle, isort, pyupgrade, flake8-bugbear
ignore = []

# Ignore F401 only in __init__.py when re-exporting symbols
per-file-ignores = { "src/swe_ai_fleet/__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
