[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-ai-fleet"
version = "0.1.0"
description = "Multi-agent SWE at the edge. Local-first, open-source."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Note: redis and neo4j are runtime dependencies, not build-time
    # They are included here for convenience but could be moved to optional-dependencies
    # if we want a minimal build-only installation
]

[project.optional-dependencies]
# Developer tooling
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "rich>=13.0",  # For monitoring scripts
]

# gRPC microservices dependencies
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "nats-py>=2.6.0",
    "structlog>=23.2.0",
    "pyyaml>=6.0.1",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",  # HTTP client (needed by VLLMAgent)
]

# Integration testing with Docker containers
integration = [
    "testcontainers>=4.0.0",
]

# Ray-based GPU tests and jobs (optional)
ray = [
    "ray[default]>=2.10",
]

# Agent tools - Comprehensive toolkit for workspace operations
tools = [
    "psycopg2-binary>=2.9.9",   # PostgreSQL client
    # redis and neo4j already in base dependencies
    # Note: requests is already in grpc optional-dependencies
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
namespaces = false

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["core"]
extend-exclude = ["*_pb2.py", "*_pb2.pyi", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["F", "E", "I", "UP", "B"]  # Pyflakes, pycodestyle, isort, pyupgrade, flake8-bugbear
ignore = []

# Ignore F401 only in __init__.py when re-exporting symbols
per-file-ignores = { "core/__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=.",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=json",
]
# NOTE: Coverage scope is defined in [tool.coverage.run].source
# Tests are excluded via [tool.coverage.run].omit
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires external services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["."]
branch = true
parallel = false
# NOTE: Using "." as source to generate full relative paths from repo root
# This eliminates the need for post-processing with sed scripts
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/*_test.py",
    "*/gen/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__init__.py",
    "*/*_pb2.py",
    "*/*_pb2_grpc.py",
    "*/*_pb2.pyi",
]

[tool.coverage.report]
precision = 2
skip_empty = true
show_missing = true
sort = "Cover"
# Note: No fail_under here - SonarCloud enforces quality gates:
#   - Overall coverage: 70% minimum
#   - New code coverage: 80% minimum

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
title = "SWE AI Fleet - Monorepo Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
#
# Normalize coverage paths coming from different execution environments.
# In particular, Ray modules tested via `scripts/test/local-docker.sh` run
# inside a container with the project mounted at `/app`, so coverage data
# may contain absolute paths like `/app/core/ray_jobs/...`.
# Mapping `/app` back to `.` ensures that:
# - Combined coverage reports can still resolve source files on the host.
# - File paths in `coverage.xml` remain consistent for SonarCloud.
#
# Note: When combining coverage from multiple modules, each module's
# coverage data contains paths relative to the repo root (e.g., 
# `services/planning/...` or `core/shared/...`). These paths should
# already be consistent and don't need additional mapping.
[tool.coverage.paths]
source = [
    ".",
    "/app",
]
