[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-review-processor-service"
version = "0.1.0"
description = "Backlog Review Processor Service - Converts backlog review deliberations into tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.68.1",
    "protobuf>=6.0.0,<7.0.0",
    "nats-py>=2.10.0",
    "neo4j>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["."]
extend-exclude = ["*_pb2.py", "*_pb2.pyi", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["F", "E", "I", "UP", "B"]
ignore = []
per-file-ignores = { "services/backlog_review_processor/__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=backlog_review_processor",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=json",
]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires external services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["backlog_review_processor"]
branch = true
parallel = false
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/*_test.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__init__.py",
    "*/*_pb2.py",
    "*/*_pb2_grpc.py",
    "*/*_pb2.pyi",
]

[tool.coverage.report]
precision = 2
skip_empty = true
show_missing = true
sort = "Cover"

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Backlog Review Processor Service - Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
