[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["planning"]

[tool.setuptools.package-dir]
planning = "."

[project]
name = "planning-service"
version = "0.1.0"
description = "Planning Service - User Story Management with FSM"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.1",
    "nats-py>=2.6.0",
    "neo4j>=5.14.1",
    "redis>=5.0.1",
    "valkey>=5.0",
    "core-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=planning",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=json",
    # No --cov-fail-under: SonarCloud enforces coverage quality gates
]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires external services)",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["."]  # Package is now at root level after restructuring
branch = true
parallel = false
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/*_test.py",
    "*/gen/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__init__.py",
]
data_file = ".coverage"
context = "${COVERAGE_CONTEXT}"

[tool.coverage.report]
precision = 2
skip_empty = true
skip_covered = false
show_missing = true
sort = "Cover"
# Note: No fail_under here - SonarCloud enforces quality gates:
#   - Overall: 70% minimum (sonar.coverage.minimum)
#   - New code: 80% minimum (sonar.newCode.coverage.minimum)

exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",

    # Defensive programming
    "except ImportError:",
    "except ModuleNotFoundError:",

    # Type checking blocks
    "if TYPE_CHECKING:",
    "@overload",

    # Debugging code
    "def __repr__",
    "if self\\.debug:",
    "if settings\\.DEBUG",

    # Platform specific
    "if sys\\.platform",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Planning Service Coverage Report"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
show_contexts = true

[tool.coverage.paths]
source = [
    ".",
    "*/site-packages/planning/",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.13"
# Mypy configuration for Planning Service
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = false
explicit_package_bases = true

# NOTE: Mypy has known limitations with packages installed in editable mode (pip install -e .)
# The planning package imports work correctly at runtime, but mypy cannot resolve them.
# This is a mypy limitation, not a code problem. We configure ignore_missing_imports
# only for planning.* to allow type checking of the actual code logic while acknowledging
# this mypy limitation. This does NOT hide real type errors - it only ignores import
# resolution errors for modules that Python can find correctly.
[[tool.mypy.overrides]]
module = "planning.*"
ignore_missing_imports = true

