[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planning-ceremony-processor-service"
version = "0.1.0"
description = "Planning Ceremony Processor - gRPC service to start ceremony executions (fire-and-forget)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "nats-py>=2.6.0",
    "neo4j>=5.0",
    "valkey>=5.0",
    "pyyaml>=6.0.1",
    "core-shared",
    "core-ceremony-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["."]
extend-exclude = ["*_pb2.py", "*_pb2.pyi", "*_pb2_grpc.py", "*/gen/*"]

[tool.ruff.lint]
select = ["F", "E", "I", "UP", "B"]
ignore = []
per-file-ignores = { "services/planning_ceremony_processor/__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--timeout=60",
    "--cov=services.planning_ceremony_processor",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires external services)",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["services.planning_ceremony_processor"]
branch = true
parallel = false
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/*_test.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__init__.py",
    "*/gen/*",
    "*/*_pb2.py",
    "*/*_pb2_grpc.py",
    "*/*_pb2.pyi",
]

[tool.coverage.report]
precision = 2
skip_empty = true
show_missing = true
sort = "Cover"

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "@overload",
]

[tool.coverage.xml]
output = "coverage.xml"
