[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["task_derivation"]

[tool.setuptools.package-dir]
task_derivation = "."

[project]
name = "task-derivation-service"
version = "0.1.0"
description = "Task Derivation Service - Automatic task derivation using LLM"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.68.1",
    # NOTE: grpcio-tools is only needed in Docker builder stage (or tests), not in runtime.
    # Repo constraints pin protobuf to < 6.0.0 for compatibility with grpcio-tools wheels.
    "protobuf>=5.26.0,<6.0.0",
    "nats-py>=2.6.0",
    "core-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
minversion = "7.0"
# Note: pythonpath is NOT set here to allow PYTHONPATH env var from test-module.sh
# to work correctly. test-module.sh sets PYTHONPATH="$PROJECT_ROOT:$MODULE_PATH:$PYTHONPATH"
# which allows imports from core modules (core.shared, etc.)
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=task_derivation",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=json",
]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires external services)",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = ["task_derivation"]
branch = true
parallel = false
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/*_test.py",
    "*/gen/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__init__.py",
]
data_file = ".coverage"
context = "${COVERAGE_CONTEXT}"

[tool.coverage.report]
precision = 2
skip_empty = true
skip_covered = false
show_missing = true
sort = "Cover"

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "@overload",
    "if sys\\.platform",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Task Derivation Service Coverage Report"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
show_contexts = true

[tool.coverage.paths]
source = [
    "task_derivation/",
    "*/site-packages/task_derivation/",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "I", "UP", "B"]
ignore = []
per-file-ignores = { "services/task_derivation/__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "preserve"

